--- a/‏‏my-app/src/app/fozajil/pay/pay.module.css
+++ b/‏‏my-app/src/app/fozajil/pay/pay.module.css
@@ -57,12 +57,8 @@
 .curmony{
     width:80%;
     display:flex;
-    flex-direction:column;
+    flex-direction:row;
     justify-content:center;
     align-items:center;
     
 }
-.curmony input {
-    width:100%;
-}
-
