--- a/‏‏my-app/src/app/fozajil/pay/pay.module.css
+++ b/‏‏my-app/src/app/fozajil/pay/pay.module.css
@@ -54,11 +54,20 @@
     align-items: center;
     gap: 1rem;
 }
+.contect form label{
+    font-size:13px;
+    margin-bottom:-5px;
+    margin-top:5px;
+}
 .curmony{
     width:80%;
     display:flex;
     flex-direction:row;
     justify-content:center;
     align-items:center;
+    margin-top:-2px;
     
 }
+.curmony input{
+    margin-top:0px;
+    }
